--- a/package.json
+++ b/package.json
@@ -42,8 +42,9 @@
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.3",
     "lucide-react": "^0.553.0",
-    "next": "16.0.1",
+    "next": "^16.0.7",
     "next-themes": "^0.4.6",
+    "nextjs": "^0.0.3",
     "pocketbase": "^0.26.3",
     "qrcode.react": "^4.2.0",
     "react": "19.2.0",
